feat: add error handling
