# requests/transaction.go
@@ -1,14 +1,12 @@
 package requests
 
 import (
-	"bank-account-manager/utils"
-
 	validation "github.com/go-ozzo/ozzo-validation"
 )
 
 type TransactionRequest struct {
-	Type   utils.TransactionType `json:"type"`
-	Amount float64               `json:"amount"`
+	Type   string  `json:"type"`
+	Amount float64 `json:"amount"`
 }
 
 func (request TransactionRequest) Validate() error {
